# Metaheuristic_QAP

./: .gitignore  CMakeLists.txt  Metaheuristic_QAP.project  README.md  README.txt
application/: CMakeLists.txt  qap_TS.cpp  qap_test.cpp
src/: CMakeLists.txt  QAP.h  QAPEval.h  QAPInit.h  QAPSwapIncrEval.h  QAPSwapNeighbor.h  QAPSwapNeighborhood.h
